objects/Utility_Bill_Configurator__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to maintain the list of values for &quot;YearlyElectricBillIncrease&quot; custom field on Quote to send to DOCGEN for Proposals.</description>
    <fields>
        <fullName>DealType__c</fullName>
        <label>DealType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Utility Bill Configurator</label>
</CustomObject>